Backend completed: PostgreSQL connection, City entity, and fully functional REST API

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=backend
+
+# ===============================
+# 🌐 Configuration serveur
+# ===============================
+server.port=8081
+
+# ===============================
+# 🗄️ Base de données PostgreSQL
+# ===============================
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ===============================
+# ⚙️ JPA / Hibernate
+# ===============================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ===============================
+# 🧩 Logs
+# ===============================
+logging.level.org.springframework.web=INFO
+logging.level.org.hibernate.SQL=DEBUG
