--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,14 +10,14 @@ on:
 
 jobs:
   build:
-    name: Build and Test
+    name: Build and Test Project
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 🟢 Java (Backend)
+      # 🟢 Setup Java for backend build
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -28,7 +28,7 @@ jobs:
         working-directory: backend
         run: mvn clean package -DskipTests
 
-      # 🟢 Node (Frontend)
+      # 🟢 Setup Node for frontend build
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -36,9 +36,8 @@ jobs:
 
       - name: Install dependencies
         working-directory: frontend
-        run: npm install
+        run: npm ci
 
       - name: Build Angular frontend
         working-directory: frontend
         run: npm run build --prod
-
