--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,20 +4,17 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
-    name: Build and Test Project
     runs-on: ubuntu-latest
+    env:
+      RENDER_DEPLOY_HOOK: ${{ secrets.RENDER_DEPLOY_HOOK }}
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      # 🟢 Setup Java for backend build
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -28,7 +25,6 @@ jobs:
         working-directory: backend
         run: mvn clean package -DskipTests
 
-      # 🟢 Setup Node for frontend build
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -41,3 +37,10 @@ jobs:
       - name: Build Angular frontend
         working-directory: frontend
         run: npm run build --prod
+
+      # 🚀 Trigger Render Deploy Hook
+      - name: Deploy to Render
+        if: github.ref == 'refs/heads/main'
+        run: |
+          echo "Triggering Render deploy..."
+          curl "$RENDER_DEPLOY_HOOK"
